dark mode fixes

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,6 @@
     margin: 0 auto;
     padding: 2rem;
     text-align: center;
-    color: black;
 }
 
 main {
