--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
+    background-color: #213547;
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
